--- a/wp-content/themes/theme/styles/pages/syringe-landing.css
+++ b/wp-content/themes/theme/styles/pages/syringe-landing.css
@@ -6,4 +6,10 @@
 	& .card {
 		margin-bottom: 30px;
 	}
+
+	& .label {
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
+	}
 }
